css/style.css
/* ... */
/* prettier-ignore */
.aside2:hover {
  background-image:
    linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.014) 0%,
      rgba(7, 7, 7, 0.973) 80%
    ),
    url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/PlayStation-5-DualSense-796x417.jpg);
}

.aside-head {
  font-size: 24px;
  margin: 0;
}

.aside ul {
  margin: 0;
}

.aside > p {
  width: 35%;
}

.latest {
  margin: 5% auto;
  max-width: 1000px;
}

.latest-news-header {
  color: #f42;
  font-size: 26px;
  font-weight: 1000;
  letter-spacing: -1px;
  cursor: pointer;
}

.latest-news-header:hover {
  color: black;
}

.latest-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 226px 226px;
  gap: 1.3% 1.9%;
}

.latest-grid article {
  cursor: pointer;
}

.art-img {
  height: 60%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.art-img-1 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/DDFree-movies-516x270.jpg);
}

.art-img-2 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/playstation-ps5-dualsense-controller-design-516x270.jpg);
}

.art-img-3 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/07/Zoom-trash-hed-v2-513x270.jpg);
}

.art-img-4 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/sale_27613_primary_image_wide-540x270.jpg);
}

.art-img-5 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/ev-tesla-bmw-nissan-leaf-i3-vw-eup-magnetic-field-pacemaker-cied-cardiac-480x270.jpg);
}

.art-img-6 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-11-516x270.jpg);
}

.art-img-7 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-516x270.png);
}

.art-img-8 {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/SprayableTech-MIT-514x270.jpg);
}

.art-desc {
  margin: 3% auto;
}

.art-desc:hover {
  color: #f42;
}

.art-foot {
  margin: 0;
  color: rgb(182, 182, 182);
  font-size: 13px;
}

/* FUNDING SECTION */
.funding {
  display: flex;
  flex-direction: column;
  max-width: 1192px;
  margin: 0 auto;
}

.funding-top {
  display: flex;
  flex: 1;
  align-items: center;
  margin-bottom: 20px;
}

.rounds-right {
  text-decoration: none;
  color: #f42;
  padding: 0 10px;
  border-right: 1px solid #f42;
}

.rounds-right-last {
  border: none;
}

.rounds-left {
  flex: 1;
  font-size: 1.5em;
  color: #f42;
  font-weight: 900;
  text-decoration: none;
}

.rounds-r {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}

.funding-main {
  display: flex;
  flex: 1;
  flex-direction: row;
  justify-content: space-between;
  cursor: pointer;
}

.fund {
  display: flex;
  flex-basis: 24%;
  flex-direction: column;
  color: #555;
}

.fund-top {
  display: flex;
  width: 100%;
  background: #ff432232;
  margin: 0;
  flex-direction: column;
  position: relative;
  z-index: 0;
}

.fund-top h3 {
  margin: 0;
  background: #f42;
  color: white;
  padding: 10px 10px 10px 29%;
}

.fund-top-bottom {
  padding: 10px 10px 10px 0;
  margin-left: 29%;
}

.fund-amt {
  margin: 0;
  font-weight: bold;
  color: black;
}

.fund-type {
  margin: 0;
  font-size: 0.7em;
}

.fund-img {
  position: absolute;
  width: 20%;
  height: 60%;
  margin: 0;
  top: 20%;
  left: 4%;
  bottom: 20%;
}

.news-latest-section-headline p::before {
  content: "\2022";
  color: #f42;
  font-weight: bold;
  display: inline-block;
  width: 0.5em;
  margin-left: -1em;
}

.news-latest-section-headline p {
  margin: 0 auto;
}

.fund-center {
  margin-top: 2%;
  padding-left: 14px;
  cursor: pointer;
}

.fund-center p {
  margin: 3% 0 0;
  font-size: 14px;
}

.fund-foot p {
  margin: 3% 0 0;
  cursor: pointer;
}

.fund-center p:hover {
  color: black;
}

.fund-foot {
  border-top: 0.5px solid #f42;
  margin-top: 5%;
  font-size: 14px;
  padding-left: 14px;
}

.fund-foot small {
  margin: 3% 0 0;
  color: grey;
  cursor: pointer;
}

/* DEALS SECTION */
.latest-deals {
  display: flex;
  flex-direction: column;
  max-width: 1192px;
  margin: 20px auto 15%;
}

.deals-top {
  flex: 1;
  display: flex;
  align-items: center;
  margin: 30px 0;
}

.deals-top-left {
  display: flex;
  flex: 1;
  text-decoration: none;
  color: #f42;
  font-size: 1.5em;
  font-weight: bold;
  letter-spacing: -1px;
}

.deals-top-right {
  display: flex;
  flex: 1;
  justify-content: flex-end;
  text-decoration: none;
  color: #f42;
}

.rounds-left:hover,
.rounds-right:hover,
.deals-top-left:hover,
.deals-top-right:hover {
  color: black;
}

.deals-body {
  display: grid;
  grid-template-columns: repeat(4, 24%);
  grid-template-rows: 226px 226px;
  grid-row-gap: 20px;
  justify-content: space-between;
}

.deals {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 80% 10% 10%;
}

.deals-img {
  width: 100%;
  height: 100%;
  background-size: cover;
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: 0 100%;
}

.deals-img1 {
  background-image: url(https://cdnp0.stackassets.com/7a3bbbe12b77586ca58798dc2aac6b0f51f7a8ac/store/f9f2b2fcf253000289dc27dcaaa106fa4b1a0c3e579bbc0612dd572eee70/sale_26993_primary_image.jpg);
}

.deals-img2 {
  background-image: url(https://cdnp1.stackassets.com/cba31166b47b2c151d94a8397c4aa0604771f268/store/04b44dd5593f2a7c175e4dd48292fe76d560b9c1c0536d03345aa8c50141/sale_18367_primary_image.jpg);
}

.deals-img3 {
  background-image: url(https://cdnp2.stackassets.com/9257668fcaee11d85700e41e6f0885af53444764/store/c3e91210d1e14fad0bbd67762249ba37d7293eff10e62c29ed5b6c368248/sale_27001_primary_image.jpg);
}

.deals-img4 {
  background-image: url(https://cdnp0.stackassets.com/b71a35933bfff2f4b68162cdd15511d4c852028e/store/213bde39c7285726394c4afed207d57cfd6bf224453c2c0edbfc12a448e8/sale_24208_primary_image.jpg);
}
/* ... */

